--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -408,6 +408,7 @@
                 p {
                     font-weight: 500;
                     margin-block-start: 0;
+                    margin: auto;
                 }
 
                 svg {
