fix: resource metadata filter (#920)
* chore(cms): update "src/collections/projects/regulating-the-digital-domain.md" (#896)

Automatically generated. Merged on Decap CMS.

* chore(cms): update "src/collections/projects/regulating-the-digital-domain.md" (#897)

Automatically generated. Merged on Decap CMS.

* chore(cms): update "src/collections/projects/regulating-the-digital-domain.md" (#898)

Automatically generated. Merged on Decap CMS.

* chore(cms): update "src/collections/projects/regulating-the-digital-domain.md" (#899)

Automatically generated. Merged on Decap CMS.

* chore(cms): update "src/collections/projects/regulating-the-digital-domain.md" (#900)

Automatically generated. Merged on Decap CMS.

* chore(cms): update "src/collections/projects/regulating-the-digital-domain.md" (#901)

Automatically generated. Merged on Decap CMS.

* chore(cms): update "src/collections/projects/regulating-the-digital-domain.md" (#902)

Automatically generated. Merged on Decap CMS.

* fix: remove usages of getResourceMetadataLabelFilter in templates

* fix: lint issue

---------

Co-authored-by: idrc-cms-bot <41127776+idrc-cms-bot@users.noreply.github.com>
Co-authored-by: Ned Zimmerman <ned@bight.dev>

--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -407,7 +407,7 @@
 
                 p {
                     font-weight: 500;
-                    margin-block-start: 0;
+                    margin: auto;
                 }
 
                 svg {
