feat: update ACAW banner

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -24,22 +24,16 @@
         <div class="section section--full section--full-bleed section--bg-white section--fg-black">
             <div class="wrapper">
                 <p class="subhead">
-                <strong>A different kind of gathering</strong><br />
-                May 27 &amp; 28 
+                <strong>A different kind of gathering</strong>
                 </p>
             </div>
         </div>
         <div class="section section--full section--full-bleed section--bg-teal-500 section--fg-black">
             <div class="wrapper">
                 <div>
-                    <ul role="list">
-                        <li>
-                            <a href="https://sites.events.concordia.ca/sites/accessconf/en/accessible-canada-accessible-world" rel="external">Find out more about the conference</a>
-                        </li>
-                        <li>
-                            <a href="https://sites.events.concordia.ca/sites/accessconf/en/accessible-canada-accessible-world/register" rel="external">Register now</a>
-                        </li>
-                    </ul>
+                    <p>
+                        <a href="https://acaw-cama.idrc.ocadu.ca" rel="external">Explore conference presentations</a>
+                    </p>
                 </div>
             </div>
         </div>
