--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -96,6 +96,15 @@
     }
 
     @include breakpoint-up(md) {
+        > div:nth-child(2) {
+            padding-block: 0.875rem;
+        }
+
+        > div:nth-child(3) {
+            padding-block-end: 3.5rem;
+            padding-block-start: 2.875rem;
+        }
+
         header {
             align-items: center;
             display: flex;
