fix: update based on PR feedback and fix style issue for resources filters

--- a/src/assets/styles/pages/_resources.scss
+++ b/src/assets/styles/pages/_resources.scss
@@ -51,7 +51,7 @@
 
                     p {
                         color: var(--fl-fgColor, var(--indigo-500));
-                        margin-block-start: 0;
+                        margin-block: 0;
                     }
                 }
 
