--- a/src/_includes/partials/components/filter-resources.njk
+++ b/src/_includes/partials/components/filter-resources.njk
@@ -7,14 +7,17 @@
     {% include 'partials/components/filter-resources-header.njk' %}
 
     <div class="filter-section" id="filterBody-topics">
+        <fieldset>
+        <legend class="visually-hidden">{{ filterTitle }}</legend>
         <ul>
             {% for topic in resourceTopics.resourceTopics %}
                 <li>
                     <input class="filter-checkbox" type="checkbox" data-filter="topics" id="{{ topic.value }}" name="{{ 'to_' + topic.value }}">
-                    <label aria-label="Topics filter, {{ topic.label }}" for="{{ topic.value }}">{{ topic.label }}</label>
+                    <label for="{{ topic.value }}">{{ topic.label }}</label>
                 </li>
             {% endfor %}
         </ul>
+        </fieldset>
     </div>
 
     {# Type selections #}
@@ -24,14 +27,17 @@
     {% include 'partials/components/filter-resources-header.njk' %}
 
     <div class="filter-section" id="filterBody-types">
+        <fieldset>
+        <legend class="visually-hidden">{{ filterTitle }}</legend>
         <ul>
             {% for type in resourceTypes.resourceTypes %}
                 <li>
                     <input class="filter-checkbox" type="checkbox" data-filter="types" id="{{ type.value }}" name="{{ 'ty_' + type.value }}">
-                    <label aria-label="Types filter, {{ type.label }}" for="{{ type.value }}">{{ type.label }}</label>
+                    <label for="{{ type.value }}">{{ type.label }}</label>
                 </li>
             {% endfor %}
         </ul>
+        </fieldset>
     </div>
 
     <div class="filter-buttons">
