--- a/src/_includes/partials/components/filter-resources.njk
+++ b/src/_includes/partials/components/filter-resources.njk
@@ -7,6 +7,8 @@
     {% include 'partials/components/filter-resources-header.njk' %}
 
     <div class="filter-section" id="filterBody-topics">
+        <fieldset>
+        <legend class="visually-hidden">{{ filterTitle }}</legend>
         <ul>
             {% for topic in resourceTopics.resourceTopics %}
                 <li>
@@ -15,6 +17,7 @@
                 </li>
             {% endfor %}
         </ul>
+        </fieldset>
     </div>
 
     {# Type selections #}
@@ -24,6 +27,8 @@
     {% include 'partials/components/filter-resources-header.njk' %}
 
     <div class="filter-section" id="filterBody-types">
+        <fieldset>
+        <legend class="visually-hidden">{{ filterTitle }}</legend>
         <ul>
             {% for type in resourceTypes.resourceTypes %}
                 <li>
@@ -32,6 +37,7 @@
                 </li>
             {% endfor %}
         </ul>
+        </fieldset>
     </div>
 
     <div class="filter-buttons">
