fix: update page header to check for French version of projects in url

--- a/src/_includes/partials/components/page-header.njk
+++ b/src/_includes/partials/components/page-header.njk
@@ -1,7 +1,7 @@
 <header class="page-header" {% if locale !== 'en-CA' %} lang="en-CA" dir="ltr" {% endif %}>
     <div class="wrapper">
         {% set breadcrumbs = [] %}
-        {% if eleventyNavigation.key and 'projects' not in page.url %}
+        {% if eleventyNavigation.key and 'projects' not in page.url and 'projets' not in page.url %}
         {% set breadcrumbs = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key) %}
         {% endif %}
         {% if breadcrumbs.length > 0 %}
