--- a/src/assets/styles/components/_brand.scss
+++ b/src/assets/styles/components/_brand.scss
@@ -12,16 +12,22 @@
     &:focus {
         background: var(--fl-linkColor, var(--black));
         color: var(--fl-bgColor, var(--white));
+        svg {
+            fill: var(--fl-bgColor, var(--white));
+        }
     }
 
     &:active {
         background: var(--fl-linkColor, color.adjust(black, $alpha: -0.3));
         color: var(--fl-bgColor);
+        svg {
+            fill: var(--fl-bgColor);
+        }
     }
 }
 
 .brand svg {
-    fill: currentcolor;
+    fill: var(--fl-linkColor, var(--idrc-blue));
     inline-size: rem(40);
     margin-inline-start: rem(18);
 }
@@ -38,17 +44,17 @@
 
 .page--home {
     .brand {
-        color: var(--fl-linkColor, var(--blue-500));
+        color: var(--fl-linkColor, var(--idrc-blue));
         inline-size: rem(72);
 
         &:hover,
         &:focus {
-            background: var(--fl-linkColor, var(--blue-500));
+            background: var(--fl-linkColor, var(--idrc-blue));
             color: var(--fl-bgColor, var(--white));
         }
 
         &:active {
-            background: var(--fl-linkColor, color.adjust($blue-500, $alpha: -0.3));
+            background: var(--fl-linkColor, color.adjust($idrc-blue, $alpha: -0.3));
             color: var(--fl-bgColor);
         }
     }
