--- a/src/_includes/partials/components/page-header.njk
+++ b/src/_includes/partials/components/page-header.njk
@@ -25,7 +25,7 @@
         </a>
         {%- endfor -%}
         {% if intro %}
-        <div class="intro">{{ intro | markdown | safe }}</div>
+        <div class="intro">{% renderString intro, "md" %}</div>
         {% endif %}
     </div>
 </header>
