feat!: upgrade to Eleventy v3 and friends

--- a/src/_includes/layouts/single--person.njk
+++ b/src/_includes/layouts/single--person.njk
@@ -19,7 +19,7 @@
                 {% endif %}
                 {% if interests %}
                 <h2 class="h3">Interests</h2>
-                {% renderString interests, "md" %}
+                {{ interests | renderContent("md") | safe }}
                 {% endif %}
                 {% if content %}
                 <h2 class="h3">Bio</h2>
