--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -16,9 +16,9 @@
                 <h3>{{ project.data.title }}{{ " (" + project.data.shortTitle + ")" if project.data.shortTitle }}</h3>
                 {% if project.data.content %}
                 {% set fullDescription = project.data.description + " [More about " + project.data.title + "](" + project.url + ")" %}
-                {% renderString fullDescription, "md" %}
+                {{ fullDescription | renderContent("md") | safe }}
                 {% else %}
-                {% renderString project.data.description, "md" %}
+                {{ project.data.description | renderContent("md") | safe }}
                 {% endif %}
                     {% if project.data.linking.type === 'link' %}
                 <p class="project__link"><a rel="external" href="{{ project.data.linking.link }}">Go to: {{ project.data.shortTitle if project.data.shortTitle else project.data.title }} website</a></p>
