--- a/src/_includes/partials/components/section.njk
+++ b/src/_includes/partials/components/section.njk
@@ -1,58 +1,59 @@
-{% set sectionTitle = '' %}
-{% set sectionContent = '' %}
-{% set subsectionLevel = 0 %}
-{% set desktopWidth = 'section--full' %}
-{% set imageOrderDesktop = '' %}
 
-{% if section.title %}
-    {% set sectionTitle = section.title %}
-{% endif %}
-{% if section.content %}
-    {% set sectionContent = section.content %}
-{% endif %}
-{% if section.subsectionLevel %}
-    {% set subsectionLevel = section.subsectionLevel %}
-{% endif %}
-{% if section.desktopWidth %}
-    {% set desktopWidth = 'section--' + section.desktopWidth %}
-{% endif %}
-{% if section.imageOrderDesktop %}
-    {% set imageOrderDesktop = section.imageOrderDesktop %}
-{% endif %}
-<section id="{{ sectionTitle | slugify }}" class="section
-{{ desktopWidth }}
-{{ 'section--image' if section.image }}
-{{ section.desktopAlignment if section.desktopAlignment }}
-{{ 'section--full-bleed' if section.fullBleed }}
-{{ 'section--bg-' + section.backgroundColor if section.backgroundColor }}
-{{ 'section--fg-' + section.textColor if section.textColor }}"
-data-subsection-level="{{ subsectionLevel }}">
-    <div class="wrapper">
-        {% if section.image and section.imageOrder == 'start' %}
-        <figure class="{{ imageOrderDesktop }} {{ 'shadow-' + section.imageShadow if section.imageShadow else 'indigo-500' }}">
-            <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
-        </figure>
-        {% endif %}
-        <div class="section__content">
-            {% if section.borderColor %}<span class="hr hr--{{ section.borderColor }}"></span>{% endif %}
-            <h2>{{ sectionTitle | safe }}</h2>
-            {% if sectionTitle == 'Latest news' %}
-                {% if collections.news.length %}
-                    {% for item in collections.news | limit(2) %}
-                    {% include 'partials/components/post-excerpt.njk' %}
-                    {% endfor %}
-                    <p><a href="/about/news/">View all</a></p>
+    {% set sectionTitle = '' %}
+    {% set sectionContent = '' %}
+    {% set subsectionLevel = 0 %}
+    {% set desktopWidth = 'section--full' %}
+    {% set imageOrderDesktop = '' %}
+
+    {% if section.title %}
+        {% set sectionTitle = section.title %}
+    {% endif %}
+    {% if section.content %}
+        {% set sectionContent = section.content %}
+    {% endif %}
+    {% if section.subsectionLevel %}
+        {% set subsectionLevel = section.subsectionLevel %}
+    {% endif %}
+    {% if section.desktopWidth %}
+        {% set desktopWidth = 'section--' + section.desktopWidth %}
+    {% endif %}
+    {% if section.imageOrderDesktop %}
+        {% set imageOrderDesktop = section.imageOrderDesktop %}
+    {% endif %}
+    <section id="{{ sectionTitle | slugify }}"class="section
+    {{ desktopWidth }}
+    {{ 'section--image' if section.image }}
+    {{ section.desktopAlignment if section.desktopAlignment }}
+    {{ 'section--full-bleed' if section.fullBleed }}
+    {{ 'section--bg-' + section.backgroundColor if section.backgroundColor }}
+    {{ 'section--fg-' + section.textColor if section.textColor }}"
+    data-subsection-level="{{ subsectionLevel }}">
+        <div class="wrapper">
+            {% if section.image and section.imageOrder == 'start' %}
+            <figure class="{{ section.imageOrderDesktop }} {{ 'shadow-' + section.imageShadow if section.imageShadow else 'indigo-500' }}">
+                <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
+            </figure>
+            {% endif %}
+            <div class="section__content">
+               {% if section.borderColor %}<span class="hr hr--{{ section.borderColor }}"></span>{% endif %}
+                <h2>{{ sectionTitle | safe }}</h2>
+                 {% if sectionTitle == 'Latest news' %}
+                    {% if collections.news.length %}
+                        {% for item in collections.news | limit(2) %}
+                        {% include 'partials/components/post-excerpt.njk' %}
+                        {% endfor %}
+                        <p><a href="/about/news/">View all</a></p>
+                    {% else %}
+                        <p>No news items found.</p>
+                    {% endif %}
                 {% else %}
-                    <p>No news items found.</p>
+                {{ sectionContent | markdownFilter | safe }}
                 {% endif %}
-            {% else %}
-                {% renderString sectionContent, "md" %}
+            </div>
+            {% if section.image and section.imageOrder == 'end' %}
+            <figure class="{{ section.imageOrderDesktop }} shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}">
+                <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
+            </figure>
             {% endif %}
         </div>
-        {% if section.image and section.imageOrder == 'end' %}
-        <figure class="{{ imageOrderDesktop }} shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}">
-            <img src="{{ section.image }}" {% if section.image2x %}srcset="{{ section.image }} 1x, {{ section.image2x }} 2x" {% endif %}alt="{{ section.imageAltText }}" width="640" height="427" />
-        </figure>
-        {% endif %}
-    </div>
-</section>
+    </section>
