feat: replace sharp with Eleventy Image plugin

--- a/src/_includes/layouts/ideas.njk
+++ b/src/_includes/layouts/ideas.njk
@@ -13,7 +13,8 @@
                 <div class="entries entries--featured">
                 {% for post in collections.featured | limit(2) %}
                     <article class="entry">
-
+                        <img class="thumbnail" src="{{ post.data.thumbnailImage }}" alt="" />
+                        <div class="entry-content">
                         <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
                         <p class="metadata">
                             By {{ post.data.author if post.data.author else 'IDRC Team' }}
@@ -34,7 +35,7 @@
                 <div class="entries">
                 {% for post in posts %}
                     <article class="entry">
-
+                        <img eleventy:widths="570,1140" class="thumbnail" src="{{ post.data.thumbnailImage }}" alt="" />
                         <div class="entry-content">
                         <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
                         <p class="metadata">
