feat!: hierarchical project URLs, Sveltia CMS (#1167)
* feat: initial conversion to Sveltia CMS

Signed-off-by: Ned Zimmerman <ned@bight.dev>

* feat: implement project subpages with hierarchical URLs

* chore(deps): reinstall husky

* fix: remove husky command

* chore(deps): rebuild package-lock.json

* fix: restore Husky command

* fix: resolve linting error

* fix: resolve recursion in build script

ci: point Lighthouse workflow to Cloudflare
Signed-off-by: Ned Zimmerman <ned@bight.dev>

* ci: refactor Lighthouse workflow

* feat: replace youtubeEmbed shortcode with transform

Signed-off-by: Ned Zimmerman <ned@bight.dev>

* feat: create funder logos CMS block

feat: replace imagePositionWithText shortcode
Signed-off-by: Ned Zimmerman <ned@bight.dev>

* fix: resolve linting issue

* fix: address some deprecations

* fix: restore legacy peer deps setting

* fix: restore legacy peer deps setting

* fix: remove README files

* fix: reformat redirects file

* fix: remove comments from redirects file

* fix: reorder redirects

* fix: remove redirect from resources

* fix: use .jsonc for Zed settings

---------

Signed-off-by: Ned Zimmerman <ned@bight.dev>

--- a/src/_includes/layouts/single--person.njk
+++ b/src/_includes/layouts/single--person.njk
@@ -1,8 +1,4 @@
-{% if previewMode %}
-    {% extends 'layouts/preview.njk' %}
-{% else %}
-    {% extends 'layouts/base.njk' %}
-{% endif %}
+{% extends 'layouts/base.njk' %}
 
 {% set pageType = 'single single--person' %}
 {% set postType = 'Team' %}
@@ -23,7 +19,7 @@
                 {% endif %}
                 {% if interests %}
                 <h2 class="h3">Interests</h2>
-                {{ interests | markdown | safe }}
+                {% renderString interests, "md" %}
                 {% endif %}
                 {% if content %}
                 <h2 class="h3">Bio</h2>
