--- a/src/_includes/layouts/project.njk
+++ b/src/_includes/layouts/project.njk
@@ -1,37 +1,33 @@
-{% if previewMode %}
-    {% extends 'layouts/preview.njk' %}
-{% else %}
-    {% extends 'layouts/base.njk' %}
-{% endif %}
+{% extends 'layouts/base.njk' %}
 
 {% set pageType = 'page--project' %}
 
 {% block content %}
     {% include 'partials/components/page-header.njk' %}
     <article>
-        {% if parentTitle %}
-
-        {% set parentPages = collections.all | eleventyNavigationBreadcrumb(title) %}
-
-        <div class="back-to-parent">
-        {% if parentPages.length > 1 %}
-        {% set parent = parentPages[parentPages.length - 1] %}
-            <a href="{{ parent.url }}">{% include "svg/previous.svg" %} Back to {{ parent.title | safe }}</a>
-        {% endif %}
-        </div>
-
-        {% endif %}
-        
         <div class="content">
             <div class="wrapper">
-                {% if parentTitle %}
-                <h2>{{ title | safe }}</h2>
-                {% endif %}
                 {{ content | safe }}
+                {% if funderLogos.length %}
+                    {% for logo in funderLogos %}
+                        {% if output %}
+                        <div class="image-and-text image-and-text--image-{{ logo.imagePosition }} image-and-text--image-{{ logo.scale }} image-and-text--vertical-{{ logo.verticalAlignment }}">
+                            <figure class="image-and-text__media">
+                                <img src="{{ logo.image }}" alt="{{ logo.alt }}" class="image__max-height--{{ logo.maxHeight }}" />
+                            </figure>
+                            <div class="image-and-text__content">{% renderString logo.content, "md" %}</div>
+                        </div>
+                        {% else %}
+                        <p>
+                        <img src="{{ logo.image }}" alt="{{ logo.alt }}" class="image-position--{{ logo.imagePosition }} image__max-height--{{ logo.maxHeight }} image__scale--{{ logo.scale }}" />
+                        </p>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
 
-        {% set navPages = collections.all | eleventyNavigation(title) %}
+        {% set navPages = collections['projectSubpages_' + locale] | eleventyNavigation(slug) %}
 
         <nav class="nav--secondary" aria-labelledby="child-pages-heading">
         {%- if navPages.length %}
