--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -1,8 +1,4 @@
-{% if previewMode %}
-    {% extends 'layouts/preview.njk' %}
-{% else %}
-    {% extends 'layouts/base.njk' %}
-{% endif %}
+{% extends 'layouts/base.njk' %}
 
 {% set pageType = 'page--projects' %}
 
@@ -17,15 +13,15 @@
                 {% else %}
                 <img class="thumbnail" src="/assets/images/project-placeholder.svg" role="presentation" alt="" />
                 {% endif %}
-                <h3>{{ project.data.title }}{{ " (" + project.data.shortName + ")" if project.data.shortName }}</h3>
+                <h3>{{ project.data.title }}{{ " (" + project.data.shortTitle + ")" if project.data.shortTitle }}</h3>
                 {% if project.data.content %}
                 {% set fullDescription = project.data.description + " [More about " + project.data.title + "](" + project.url + ")" %}
-                {{ fullDescription | markdown | safe }}
+                {% renderString fullDescription, "md" %}
                 {% else %}
-                {{ project.data.description | markdown | safe }}
+                {% renderString project.data.description, "md" %}
                 {% endif %}
-                {% if project.data.link %}
-                <p class="project__link"><a rel="external" href="{{ project.data.link }}">Go to: {{ project.data.shortName if project.data.shortName else project.data.title }} website</a></p>
+                    {% if project.data.linking.type === 'link' %}
+                <p class="project__link"><a rel="external" href="{{ project.data.linking.link }}">Go to: {{ project.data.shortTitle if project.data.shortTitle else project.data.title }} website</a></p>
                 {% endif %}
             </article>
             {% endfor %}
