feat!: upgrade to Eleventy v3 and friends (#1169)
* feat: initial conversion to Sveltia CMS

Signed-off-by: Ned Zimmerman <ned@bight.dev>

* feat: implement project subpages with hierarchical URLs

* chore(deps): reinstall husky

* fix: remove husky command

* chore(deps): rebuild package-lock.json

* fix: restore Husky command

* fix: resolve linting error

* fix: resolve recursion in build script

ci: point Lighthouse workflow to Cloudflare
Signed-off-by: Ned Zimmerman <ned@bight.dev>

* ci: refactor Lighthouse workflow

* feat: replace youtubeEmbed shortcode with transform

Signed-off-by: Ned Zimmerman <ned@bight.dev>

* feat: create funder logos CMS block

feat: replace imagePositionWithText shortcode
Signed-off-by: Ned Zimmerman <ned@bight.dev>

* fix: resolve linting issue

* fix: address some deprecations

* fix: restore legacy peer deps setting

* fix: restore legacy peer deps setting

* fix: remove README files

* fix: reformat redirects file

* fix: remove comments from redirects file

* fix: reorder redirects

* fix: remove redirect from resources

* feat!: upgrade to Eleventy v3 and friends

* feat: replace sharp with Eleventy Image plugin

* feat: switch to CSS from Sass

* fix: resolve linting workflow issue

* fix: rebuild package-lock

* fix: missing project links

* ci: switch to better CF await action

* fix: image bug

* fix: project order

---------

Signed-off-by: Ned Zimmerman <ned@bight.dev>

--- a/src/_includes/layouts/ideas.njk
+++ b/src/_includes/layouts/ideas.njk
@@ -13,10 +13,7 @@
                 <div class="entries entries--featured">
                 {% for post in collections.featured | limit(2) %}
                     <article class="entry">
-                        {% set thumbnail = 'src' + post.data.thumbnailImage %}
-                        {% set thumbnail1x = thumbnail | resize({width: 570, height: 382, fit: 'cover'}) | png %}
-                        {% set thumbnail2x = thumbnail | resize({width: 1140, height: 764, fit: 'cover'}) | png %}
-                        <img class="thumbnail" src="{% getUrl thumbnail1x %}" srcset="{% getUrl thumbnail1x %} 1x, {% getUrl thumbnail2x %} 2x" width="570" height="382" alt="" />
+                        {% ideaImage post.data.thumbnailImage, "" %}
                         <div class="entry-content">
                         <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
                         <p class="metadata">
@@ -38,10 +35,7 @@
                 <div class="entries">
                 {% for post in posts %}
                     <article class="entry">
-                        {% set thumbnail = 'src' + post.data.thumbnailImage %}
-                        {% set thumbnail1x = thumbnail | resize({width: 570, height: 382, fit: 'cover'}) | png %}
-                        {% set thumbnail2x = thumbnail | resize({width: 1140, height: 764, fit: 'cover'}) | png %}
-                        <img class="thumbnail" src="{% getUrl thumbnail1x %}" srcset="{% getUrl thumbnail1x %} 1x, {% getUrl thumbnail2x %} 2x" width="570" height="382" alt="" />
+                        {% ideaImage post.data.thumbnailImage, "" %}
                         <div class="entry-content">
                         <h3><a href="{{ post.url }}">{{ post.data.title }}</a></h3>
                         <p class="metadata">
