--- a/src/_includes/layouts/project.njk
+++ b/src/_includes/layouts/project.njk
@@ -10,7 +10,7 @@
                 {{ content | safe }}
                 {% if funderLogos.length %}
                     {% for logo in funderLogos %}
-                        {% if output %}
+                        {% if logo.content %}
                         <div class="image-and-text image-and-text--image-{{ logo.imagePosition }} image-and-text--image-{{ logo.scale }} image-and-text--vertical-{{ logo.verticalAlignment }}">
                             <figure class="image-and-text__media">
                                 <img src="{{ logo.image }}" alt="{{ logo.alt }}" class="image__max-height--{{ logo.maxHeight }}" />
