feat: handle translated project subpages

--- a/src/_includes/layouts/project-subpage.njk
+++ b/src/_includes/layouts/project-subpage.njk
@@ -4,17 +4,14 @@
 
 {% block content %}
     {% set projectNav = collections.all | eleventyNavigation("Projects") %}
-    {% set parentProject = projectNav | findByKey(parent) | first %}
+    {% set parentProject = projectNav | findByKey(parent, locale) | first %}
     {% set parentTitle = parentProject.title %}
     {% include 'partials/components/page-header.njk' %}
     <article>
 
-
-
         <div class="back-to-parent">
-            <a href="{{ parentProject.url }}">{% include "svg/previous.svg" %} Back to {{ parentProject.title | safe }}</a>
+            <a href="{{ parentProject.url }}">{% include "svg/previous.svg" %} {{ 'Back to' if locale === 'en-CA' else 'Retour à la page' }} {{ parentProject.title | safe }}</a>
         </div>
-
 
         <div class="content">
             <div class="wrapper">
