--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -9,13 +9,13 @@
 {% if metaTitle %}
     {% set pageTitle = metaTitle %}
 {% endif %}
-	
+
 {% if metaDesc %}
     {% set pageDesc = metaDesc %}
 {% else %}
     {% set pageDesc = site.description %}
 {% endif %}
-	
+
 <title>{{ pageTitle }}</title>
 <link rel="canonical" href="{{ currentUrl }}" />
 <link rel="alternate" type="application/rss+xml" title="" href="{{ site.url }}/feed.xml">
@@ -24,18 +24,18 @@
 <meta property="og:title" content="{{ pageTitle }}" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ currentUrl }}" />
-	
+
 {% if site.twitter %}
     <meta name="twitter:creator" content="@{{ site.twitter | replace('@', '') }}" />
 {% endif %}
-	
+
 {% if pageDesc %}
     <meta name="description" content="{{ pageDesc }}" />
     <meta name="twitter:description" content="{{ pageDesc }}" />
     <meta property="og:description" content="{{ pageDesc }}" />
 {% endif %}
-	
-{% if socialImage %}  
+
+{% if socialImage %}
     <meta property="og:image" content="{{ socialImage }}" />
     <meta name="twitter:image" content="{{ socialImage }}" />
     <meta property="og:image:alt" content="Preview image for {{ site.name }}" />
@@ -47,4 +47,4 @@
     <meta name="twitter:image:alt" content="Logo of the Inclusive Design Research Centre" />
 {% endif %}
 
-<meta name="theme-color" content="#00A0CC" />
+<meta name="theme-color" content="{{ colors[headerBgColor] if headerBgColor else '#00A0CC' }}" />
