fix: resolve editing issues with projects, support translated subpages (#1179)
* feat: use translation key functionality for projects

* feat: sanitize accents

* feat: handle translated project subpages

* feat: adjust theme-colour based on page

* fix: abandon translation keys

* fix: subpages

* fix: revert uuids

* chore: rename ODD file

* chore: rename ODD file

--- a/src/_includes/layouts/project-subpage.njk
+++ b/src/_includes/layouts/project-subpage.njk
@@ -9,12 +9,9 @@
     {% include 'partials/components/page-header.njk' %}
     <article>
 
-
-
         <div class="back-to-parent">
-            <a href="{{ parentProject.url }}">{% include "svg/previous.svg" %} Back to {{ parentProject.title | safe }}</a>
+            <a href="{{ parentProject.url }}">{% include "svg/previous.svg" %} {{ 'Back to' if locale === 'en-CA' else 'Retour à la page' }} {{ parentProject.title | safe }}</a>
         </div>
-
 
         <div class="content">
             <div class="wrapper">
