--- a/src/_includes/layouts/project-subpage.njk
+++ b/src/_includes/layouts/project-subpage.njk
@@ -16,6 +16,7 @@
         <div class="content">
             <div class="wrapper">
                 <h2>{{ title | safe }}</h2>
+                <nav class="flc-toc-tocContainer"></nav>
                 {{ content | safe }}
             </div>
         </div>
