--- a/src/_includes/layouts/single.njk
+++ b/src/_includes/layouts/single.njk
@@ -5,6 +5,7 @@
         {% include 'partials/components/single-header.njk' %}
         <div class="content">
             <div class="wrapper">
+            <nav class="flc-toc-tocContainer"></nav>
             {{ content | safe }}
             </div>
         </div>
