fix: sub nav item focus with contrast themes
Resolves #1173.

--- a/src/assets/styles/components/_nav.css
+++ b/src/assets/styles/components/_nav.css
@@ -565,8 +565,8 @@
 
         &:hover,
         &:focus {
-            background: var(--fl-linkColor, var(--yellow-500));
-            color: var(--fl-bgColor, var(--black));
+            background: var(--fl-linkColor, var(--yellow-500)) !important;
+            color: var(--fl-bgColor, var(--black)) !important;
         }
 
         &:active {
